cmake_minimum_required(VERSION 3.6)
project(FEHRobot)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        fehproteusfirmware/Drivers/adc16.cpp
        fehproteusfirmware/Drivers/adc16.h
        fehproteusfirmware/Drivers/diskio.h
        fehproteusfirmware/Drivers/FEHPropeller.cpp
        fehproteusfirmware/Drivers/FEHPropeller.h
        fehproteusfirmware/Drivers/FEHXBee.cpp
        fehproteusfirmware/Drivers/FEHXBee.h
        fehproteusfirmware/Drivers/ff.cpp
        fehproteusfirmware/Drivers/ff.h
        fehproteusfirmware/Drivers/ffconf.h
        fehproteusfirmware/Drivers/i2c.cpp
        fehproteusfirmware/Drivers/i2c.h
        fehproteusfirmware/Drivers/lptmr.cpp
        fehproteusfirmware/Drivers/lptmr.h
        fehproteusfirmware/Drivers/mcg.cpp
        fehproteusfirmware/Drivers/mcg.h
        fehproteusfirmware/Drivers/SDHC.cpp
        fehproteusfirmware/Drivers/SDHC.h
        fehproteusfirmware/Drivers/spi.cpp
        fehproteusfirmware/Drivers/spi.h
        fehproteusfirmware/Drivers/uart.cpp
        fehproteusfirmware/Drivers/uart.h
        fehproteusfirmware/Libraries/FEHAccel.cpp
        fehproteusfirmware/Libraries/FEHAccel.h
        fehproteusfirmware/Libraries/FEHBattery.cpp
        fehproteusfirmware/Libraries/FEHBattery.h
        fehproteusfirmware/Libraries/FEHBuzzer.cpp
        fehproteusfirmware/Libraries/FEHBuzzer.h
        fehproteusfirmware/Libraries/FEHIO.cpp
        fehproteusfirmware/Libraries/FEHIO.h
        fehproteusfirmware/Libraries/FEHLCD.cpp
        fehproteusfirmware/Libraries/FEHLCD.h
        fehproteusfirmware/Libraries/FEHMotor.cpp
        fehproteusfirmware/Libraries/FEHMotor.h
        fehproteusfirmware/Libraries/FEHRPS.cpp
        fehproteusfirmware/Libraries/FEHRPS.h
        fehproteusfirmware/Libraries/FEHSD.cpp
        fehproteusfirmware/Libraries/FEHSD.h
        fehproteusfirmware/Libraries/FEHServo.cpp
        fehproteusfirmware/Libraries/FEHServo.h
        fehproteusfirmware/Libraries/FEHUtility.cpp
        fehproteusfirmware/Libraries/FEHUtility.h
        fehproteusfirmware/Libraries/image.h
        fehproteusfirmware/Libraries/LCDColors.h
        fehproteusfirmware/Startup/__arm_end.cpp
        fehproteusfirmware/Startup/__arm_start.cpp
        fehproteusfirmware/Startup/derivative.h
        fehproteusfirmware/Startup/kinetis_sysinit.cpp
        fehproteusfirmware/Startup/kinetis_sysinit.h
        fehproteusfirmware/Startup/MK60DZ10.h
        fehproteusfirmware/Startup/runtime_configuration.h
        fehproteusfirmware/Tools/image.h
        fehproteusfirmware/Tools/raw_image.h
        fehproteusfirmware/Tools/RunLengthEncode.cpp
        fehproteusfirmware/FEHProteus.cpp
        fehproteusfirmware/FEHProteus.h
        FEHRobot.config
        FEHRobot.elf
        FEHRobot.files
        FEHRobot.includes
        FEHRobot.map
        FEHRobot.s19
        FEHRobot.txt
        line_following.cpp
        main.cpp)

add_executable(FEHRobot ${SOURCE_FILES})